ide warnings